--- a/frontend/locales/enums/en.yml
+++ b/frontend/locales/enums/en.yml
@@ -8,5 +8,6 @@ en:
       Restricted: Restricted
       Closed: Closed
       ReadingRoom: Access to this material is restricted to the reading room of the Bentley Historical Library
+      UMich: Access to this material is restricted to the University of Michigan domain
       Fragility: Due to its fragile nature, access to the original item is restricted
       Other: Other (please specify)
